# PulsarAI

./: .env.demo.example  .env.example  .env.prod-ready.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRESENTATION.md  README.md  WORKLOG_2026-03-06.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
00 Daily/2026/: 20260316.md
configs/agents/: example.yaml
configs/examples/: cam-dpo-qwen3.5-2b.yaml
docs/: CLAUDE_CODE_ROADMAP.md  INVESTOR_DEMO.md  SETUP_GUIDE.md  STANDS.md  TASK_PACKETS.md  index.md
docs/concepts/: architecture.md  lora-qlora.md  training-strategies.md
docs/getting-started/: first-experiment.md  installation.md  quickstart.md
docs/guides/: agents.md  canary-ab.md  compute.md  copilot.md  datasets.md  deployment.md  evaluation.md  experiment-tracking.md  export.md  guardrails.md  hpo.md  human-feedback.md  model-registry.md  monitoring.md  observability.md  pipeline.md  prompt-lab.md  protocols.md  serving.md  settings-auth.md  workflow-builder.md
docs/guides/training/: config-inheritance.md  dpo.md  hardware-strategy.md  sft.md
docs/reference/: api.md  cli.md  config.md  env-vars.md
docs/superpowers/plans/: 2026-03-13-pulsar-ai-full-product.md  2026-03-14-tomorrow-plan.md
docs/superpowers/specs/: 2026-03-13-pulsar-ai-full-product-design.md
docs/tutorials/: agent-with-tools.md  chatbot-dpo.md  full-pipeline.md  gguf-serving.md  intent-classifier.md
nginx/: nginx.conf
scripts/: backup_db.sh  dev.sh  dpo_2b_v2_pipeline.py  investor_demo_bootstrap.py  run_dpo_qwen35_2b.cmd  run_dpo_qwen35_2b.ps1  run_dpo_qwen35_2b_offline.cmd  run_eval.py  run_ui_server.py  run_ui_server_18089.py  seed_demo.py  setup_env_windows.ps1  start_investor_demo.ps1  start_prod_ready_dev.ps1  start_ui_persistent.ps1  status_ui_persistent.ps1  stop_ui_persistent.ps1
site/: index.html
src/llm_forge/: cache.py  cli.py  config.py  cost.py  dataset_version.py  env.py  feedback.py  hardware.py  model_card.py
src/llm_forge/agent/: base.py  client.py  memory.py
src/llm_forge/deployment/: __init__.py  canary.py
src/llm_forge/evaluation/: llm_judge.py
src/llm_forge/guardrails/: __init__.py  engine.py
src/llm_forge/observability/: __init__.py  tracer.py
src/llm_forge/pipeline/: steps.py
src/llm_forge/training/: dpo.py
src/llm_forge/ui/: app.py  assistant.py  experiment_store.py  jobs.py  workflow_policy.py  workflow_store.py
src/pulsar_ai/: __init__.py  cache.py  cli.py  config.py  cost.py  dataset_version.py  env.py  feedback.py  hardware.py  logging_config.py  model_card.py  model_loader.py  registry.py  tracking.py  validation.py
src/pulsar_ai/agent/: __init__.py  base.py  builtin_tools.py  client.py  data_gen.py  guardrails.py  loader.py  memory.py  router.py  server.py  tool.py
src/pulsar_ai/compute/: __init__.py  manager.py  remote_runner.py  ssh.py
src/pulsar_ai/data/: formatter.py  loader.py  splitter.py
src/pulsar_ai/deployment/: canary.py
src/pulsar_ai/evaluation/: __init__.py  llm_judge.py  (+3 more)
tests/: conftest.py  test_agent.py  test_agent_cli.py  test_agent_server.py  test_agent_validation.py  test_assistant.py  test_audit_trail.py  test_auth.py  test_builtin_tools.py  test_cache.py  test_canary.py  test_cli.py  test_client.py  test_compute.py  test_compute_hardening.py  test_config.py  test_cost.py  test_data.py  test_data_gen.py  test_dataset_version.py  test_env.py  test_experiment_store.py  test_feedback.py  test_guardrails.py  test_guardrails_engine.py  test_hardware.py  test_hf_datasets.py  test_hpo.py  test_job_registry.py  test_jwt_auth.py  test_llm_judge.py  test_long_term_memory.py  test_lora_params.py  test_memory.py  test_metrics.py  test_model_card.py  test_observability.py  test_pipeline_callback.py  test_pipeline_conditions.py  test_pipeline_executor.py  (+17 more)
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
(+136 files in other folders)
